--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             {
                 title: 'The Two Main Forces',
                 subtitle: 'Gravity and Air Pressure',
-                image: 'https://placehold.co/600x400/DDA0DD/ffffff?text=Gravity+and+Pressure',
+                image: 'https://i.ytimg.com/vi/WESCNWRMoZU/maxresdefault.jpg',
                 text: 'The water moves because of two main forces: **Gravity**, which pulls everything down, and **Air Pressure**, which pushes on the water to keep the flow going.'
             },
             {
