--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             {
                 title: 'The Trick',
                 subtitle: '',
-                image: 'https://placehold.co/600x400/ADD8E6/ffffff?text=The+Water+Flow',
+                image: 'https://youtube.com/shorts/TP_M6MaziX0?si=m1ovhKidl0s1mUOC',
                 text: 'In the video, a special setup makes it look like water is moving in a circle on its own. It is poured into the top, and it seems to flow forever. It looks like a magic trick!'
             },
             {
@@ -126,7 +126,7 @@
             {
                 title: 'The Siphon Principle',
                 subtitle: '',
-                image: 'https://placehold.co/600x400/F08080/ffffff?text=Simple+Siphon',
+                image: 'https://www.researchgate.net/publication/299983176/figure/fig7/AS:350806214758403@1460650127258/Diagram-of-the-setup-for-the-siphon-used-in-our-experiments.png',
                 text: 'A siphon is a simple way to move a liquid from a higher place to a lower place using a tube. You may have seen this method used to drain water from a tank or to take fuel out of a vehicle.'
             },
             {
