--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             {
                 title: "Is It Magic?",
                 subtitle: "What's the Secret?",
-                image: 'https://placehold.co/600x400/90EE90/ffffff?text=Not+Magic,+It\'s+Science!',
+                image: 'siphon principle.png',
                 text: "No, it's not magic. It's **science**! The water is moving because of a natural law that we can see all around us. The system uses something called a **siphon**."
             },
             {
